fix hr-wrap padding on contained / full-width

--- a/src/assets/scss/boldgrid/_margin-fix.scss
+++ b/src/assets/scss/boldgrid/_margin-fix.scss
@@ -192,6 +192,11 @@
 			.row {
 				margin-left: 0px;
 				margin-right: 0px;
+				&.bg-editor-hr-wrap {
+					> div {
+						padding-left:0px;
+					}
+				}
 			}
 		}
 	}
@@ -221,6 +226,11 @@
 				.row {
 					margin-left: -5px;
 					margin-right: -5px;
+					&.bg-editor-hr-wrap {
+						> div {
+							padding-left:0px;
+						}
+					}
 				}
 				padding-left: 0px;
 				padding-right: 0px;
